# netbox-graphql-query-optimizer

./: .gitignore  LICENSE  README.md  pyproject.toml
examples/: bad-query.graphql  example-config.yaml  example-query.graphql  good-query.graphql  test-schema.json
netbox_graphql_query_optimizer/: __init__.py  __main__.py  calibrate.py  cli.py  config.py  cost.py  inspector.py  parser.py  report.py  rules.py  schema_loader.py  utils.py
